# Fractus

./: .gitignore  LICENSE.md  README.md  fractal_visualizer_log.txt
build-linux/: CMakeLists.txt  README.txt
header/: config.h  fractal_manager.h  input_manager.h  math_utils.h  screen.h  screen_manager.h  shader_manager.h
scripts/: dependencies.txt  package_release.bat
src/: fractal_manager.cpp  input_manager.cpp  main.cpp  math_utils.cpp  screen.cpp  screen_manager.cpp  shader_manager.cpp
